Fixed a bug with description length in DB. Added Assigned to input for add popup and working on pdf alignment.

--- a/jbugs-client/src/main/client/src/app/bug-management/bugs-view/bugs-view.component.css
+++ b/jbugs-client/src/main/client/src/app/bug-management/bugs-view/bugs-view.component.css
@@ -144,3 +144,13 @@ textarea {
   -moz-box-sizing:border-box;
   box-sizing:border-box;
 }
+
+table {
+  table-layout: fixed;
+}
+
+.descriptionCells {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
